--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ rel/riak
 rel/vars/dev*_vars.config
 dev/
 ebin/
+riak/rel/riak/log/console.log
+riak/rel/riak/log/error.log
+riak/rel/rickwinfreyak1/log/console.log
+riak/rel/riak1/log/error.log
+riak/rel/riak2/log/configonsole.log
+riak/rel/riak2/log/error.log
+riak/rel/riak3/log/console.lockg
