--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -32,9 +32,9 @@ end
 group :test do
   gem 'rspec-rails'
   gem 'simplecov'
-  gem 'ZenTest'
-  gem 'autotest-growl'
-  gem 'autotest-fsevent'
+  #gem 'ZenTest'
+  #gem 'autotest-growl'
+  #gem 'autotest-fsevent'
 end
 
 gem 'jquery-rails'
